--- a/does_reference.bib
+++ b/does_reference.bib
@@ -515,8 +515,8 @@
   timestamp     = {2017-05-08},
 }
 
-@Article{Bose2014,
-  author        = {Gautam Bose and Professor Ajit Mishra, Professor and Dechenaux, Emmanuel and Lowen, Aaron and Samuel, Andrew},
+@Article{Dechenaux2014,
+  author        = {Dechenaux, Emmanuel and Lowen, Aaron and Samuel, Andrew},
   title         = {Bribery in subsidized credit markets: evidence from Bangladesh},
   journal       = {Indian Growth and Development Review},
   year          = {2014},
