--- a/Does Institutional Linkage of Bank-MFI Foster Inclusive Financial Development.Rmd
+++ b/Does Institutional Linkage of Bank-MFI Foster Inclusive Financial Development.Rmd
@@ -5,7 +5,9 @@ author: "Shirley J. Ho and Sushanta K. Mallick"
 date: "December, 2016"
 output:
   pdf_document: default
+  latex_engine: xelatex
 bibliography: does_reference.bib
+
 ---
 
 ## Abstract
@@ -16,9 +18,9 @@ Growing reports indicate the presence of frauds in microfinance institutions (MF
 
 Former United Nations Secretary-General Kofi Annan, on 29 December 2003, said: ¡¥The stark reality is that most poor people in the world still lack access to sustainable financial services, whether it is savings, credit or insurance. The great challenge before us is to address the constraints that exclude people from full participation in the financial sector¡¦. Recently, Alliance for Financial Inclusion (AFI) Executive Director Alfred Hannig highlighted during the IMF-World Bank 2013 Spring Meetings: ¡¥Financial inclusion is no longer a fringe subject. It is now recognized as an important part of the mainstream thinking on economic development based on country leadership¡¦.
 
-It is reported that ¡¥38% of adults in the world do not use formal financial services, and 73% poor people are unbanked because of costs, travel distances and the often-burdensome requirements involved in opening a financial account¡¦.1 As a means of fostering financial inclusion, microfinance institutions (MFIs) play an important role in poverty reduction for developing countries. Lacking sufficient collateral to pledge, most rural borrowers suffer from credit rationing problems, as borrowers¡¦ asymmetric information increases the default risks caused by adverse selection, moral hazard, and strategic defaults [@Stiglitz1981]. The literature has addressed two approaches that MFIs can help in mitigating these information problems. The first approach argues that the group-lending scheme in MFIs lending can reduce borrowers¡¦ adverse selection problem by peer monitoring or group pressure [@Banerji1995; @Ghatak1999a; @Ghatak1999]. The second approach contends that the linkage mechanism between MFIs and commercial banks can generate information externality to other banks and help restore the loan market through participation of multiple banks [@Fuentes1996; @Bose1998; @Conning1999; @Jain1999].
+It is reported that ¡¥38% of adults in the world do not use formal financial services, and 73% poor people are unbanked because of costs, travel distances and the often-burdensome requirements involved in opening a financial account¡¦.^[http://www.worldbank.org/en/topic/financialinclusion/overview#1] As a means of fostering financial inclusion, microfinance institutions (MFIs) play an important role in poverty reduction for developing countries. Lacking sufficient collateral to pledge, most rural borrowers suffer from credit rationing problems, as borrowers¡¦ asymmetric information increases the default risks caused by adverse selection, moral hazard, and strategic defaults [@Stiglitz1981]. The literature has addressed two approaches that MFIs can help in mitigating these information problems. The first approach argues that the group-lending scheme in MFIs lending can reduce borrowers¡¦ adverse selection problem by peer monitoring or group pressure [@Banerji1995; @Ghatak1999a; @Ghatak1999]. The second approach contends that the linkage mechanism between MFIs and commercial banks can generate information externality to other banks and help restore the loan market through participation of multiple banks [@Fuentes1996; @Bose1998; @Conning1999; @Jain1999].
 
-For either of the two approaches, the credibility of MFIs is the key for the mechanism to work. Unfortunately, frauds may occur in microfinance institutions (MFIs) as it can happen in any other type of company, organization or government institution in countries where there are weak institutions, weak rule of law, and fraudulent behavior of MFI officers for personal gain. There are increasing reports that local nongovernment (NGO) MFIs subcontracted by a multi-million-dollar microfinance program are taking bribes from borrowers.2 As documented on the microfinance gateway site (http://www.microfinancegateway.org/) of CGAP (World Bank), there have been investor concerns about corruption in MFIs. While there are increasing calls to launch financial governance on these NGO MFIs, many would worry whether frauds of this nature can damage MFIs¡¦ contributions to the credit market, particularly in the bank-linkage program where the NGO MFIs act as third party intermediary to reveal information about the borrower [see @Bose1998]. In a recent empirical study, @Al-Azzam2016 provide evidence that microcredit interest rates respond positively to corruption. The study reports asymmetry in this relationship in the sense that while corruption has a positive and significant impact on interest rates of unregulated MFIs, it has a negligible impact on interest rates of regulated MFIs. Therefore, it is possible that countries with better regulation of MFIs can have low incidence of bribery as in @Dechenaux2014.
+For either of the two approaches, the credibility of MFIs is the key for the mechanism to work. Unfortunately, frauds may occur in microfinance institutions (MFIs) as it can happen in any other type of company, organization or government institution in countries where there are weak institutions, weak rule of law, and fraudulent behavior of MFI officers for personal gain. There are increasing reports that local nongovernment (NGO) MFIs subcontracted by a multi-million-dollar microfinance program are taking bribes from borrowers.^[See http://www.speroforum.com/a/17580/Microfinance-industry-breeds-corruption.] As documented on the microfinance gateway site (http://www.microfinancegateway.org/) of CGAP (World Bank), there have been investor concerns about corruption in MFIs. While there are increasing calls to launch financial governance on these NGO MFIs, many would worry whether frauds of this nature can damage MFIs¡¦ contributions to the credit market, particularly in the bank-linkage program where the NGO MFIs act as third party intermediary to reveal information about the borrower [see @Bose1998]. In a recent empirical study, @Al-Azzam2016 provide evidence that microcredit interest rates respond positively to corruption. The study reports asymmetry in this relationship in the sense that while corruption has a positive and significant impact on interest rates of unregulated MFIs, it has a negligible impact on interest rates of regulated MFIs. Therefore, it is possible that countries with better regulation of MFIs can have low incidence of bribery as in @Dechenaux2014.
 
 Using a sample of 832 MFIs from 74 countries for the period 2003¡V2011, @Sainz-Fernandez2015 identify different internal and external factors for crises in microfinance institutions. They find that countries with high levels of corruption can create disincentives for customers to pay back loans and thereby MFI failure, as the control of corruption variable has a positive and insignificant coefficient with the mean value of control of corruption for these 74 countries staying at ???0.556 (when the indicator ranges from ???2.5 to 2.5 ¡V from high to low corruption). Using the same variable (mean value of ???0.58), @Ahlin2011 find that corruption acts as a barrier to start-up microenterprise growth, although not to subsequent extensive MFI growth. There is therefore sufficient anecdotal and rigorous empirical evidence to motivate our analysis that there are common types of fraudulent practices by MFI officers for private gain in countries where there are weak rule of law and poor quality institutions as reflected in the control of corruption index used in these studies. In section 'No linkage', in the context of India, we show that banks and financial institutions were entering the microfinance market in increasing numbers until 2008¡V2009 (see Figure 4). Since then, the linkage program has stabilized possibly showing cases of bad practices, partly supporting the evidence in @Sainz-Fernandez2015 and anecdotal evidence in @Lahkar2016. Nevertheless, getting MFIs to coordinate with self-help groups (SHGs) is important in order to establish a robust linkage with mainstream commercial banks and make the bank-MFI linkage sustainable. As the number of SHGs has declined since 2009 as shown in section 'Related Evidence on Microfinance Activity', this does reflect the possible impact of frauds or failure of some SHGs.
 
@@ -26,13 +28,13 @@ The purpose of this study is to analyze the collusion decisions faced by MFIs an
 
 We demonstrate that banks are more likely to lend to borrowers whose projects have been partially funded by MFIs. We consider collusion behavior by the MFI, which will extract a share of the gains from strategic default from the borrower and thus reduce the borrower's gain from strategically defaulting on the bank's loan. However, our conclusions are robust to the relaxation of this assumption. Partial funding from the MFI reduces the amount borrowed from the banks and lowers the payoff from strategic default as long as it is assumed that the MFI can always prevent strategic default on the amount that it lends.
 
-Specifically, we consider a linkage between commercial bank and MFI. In an environment with asymmetric information on the borrower's effort cost, the commercial bank takes the loan made by MFI as a collateral or endorsement. So the MFI's lending decision will serve as a signal of the borrower's effort cost, with which the commercial bank can adjust its belief on the borrower's effort decision, thus mitigating the credit rationing and strategic default problems. Our contribution is to consider the possibility that the MFI can collude with the borrower, make a fictitious loan and then ask for a share of the extra loan from the bank. Our result shows that the bribe requested by the MFI will decrease the borrower's shirking benefit, which then increases the borrower's relative benefit of putting in full effort. Although the bank's lending threshold is unchanged, its posterior belief that the borrower may put in effort will increase (after observing the MFI's loan decision), and hence the probabilities of credit rationing and strategic default will both decrease. In other words, in addition to the function of screening borrower types which has been the main idea in the existing discussion on linkages, the MFI is able to monitor their efforts and extract rents from shirkers. Collusion between MFI and the borrower will reduce the borrower's benefit from shirking, and hence the screening function of linkage is reinforced when the possibility of collusion of this nature is considered.
+Specifically, we consider a linkage between commercial bank and MFI. In an environment with asymmetric information on the borrower's effort cost, the commercial bank takes the loan made by MFI as a *collateral* or *endorsement*. So the MFI's lending decision will serve as a signal of the borrower's effort cost, with which the commercial bank can adjust its belief on the borrower's effort decision, thus mitigating the credit rationing and strategic default problems. Our contribution is to consider the possibility that the MFI can collude with the borrower, make a fictitious loan and then ask for a share of the extra loan from the bank. Our result shows that the bribe requested by the MFI will decrease the borrower's shirking benefit, which then increases the borrower's relative benefit of putting in full effort. Although the bank's lending threshold is unchanged, its posterior belief that the borrower may put in effort will increase (after observing the MFI's loan decision), and hence the probabilities of credit rationing and strategic default will both decrease. In other words, in addition to the function of screening borrower types which has been the main idea in the existing discussion on linkages, the MFI is able to monitor their efforts and extract rents from shirkers. Collusion between MFI and the borrower will reduce the borrower's benefit from shirking, and hence the screening function of linkage is reinforced when the possibility of collusion of this nature is considered.
 
-Many studies have addressed the impact of corruption in the credit market (Jain, 2001; Beck et al., 2006; Barth et al., 2009), but only a few discuss the impact of corruption in a vertical hierarchy lending framework. Hwang et al. (2007) consider corruption between borrower and auditor in a lending contract; a low-type firm can bribe the auditor to file an untruthful report about its true type so as to obtain a loan from the bank to finance a risky project. Their main finding is that, depending on the economic environment, the bank may or may not want to deter such a collusion in the lending contract. Our framework is different from theirs in the sense that the MFIs-bank linkage is self-interest motivated on the part of the MFI. There is no incentive rent required for MFI to take its role (Fuentes, 1996; Varghese, 2005), nor other policies such as subsidies are required. Since MFI's money is directly involved in this linkage, the lending decision of MFI is itself a trustable endorsement of the borrower's reputation and repayment capacity. Most importantly, collusion between MFI and the borrower will improve the benefit of this linkage.
+Many studies have addressed the impact of corruption in the credit market [@Jain2001; @Beck2006; @Barth2009], but only a few discuss the impact of corruption in a vertical hierarchy lending framework. @Hwang2007 consider corruption between borrower and auditor in a lending contract; a low-type firm can bribe the auditor to file an untruthful report about its true type so as to obtain a loan from the bank to finance a risky project. Their main finding is that, depending on the economic environment, the bank may or may not want to deter such a collusion in the lending contract. Our framework is different from theirs in the sense that the MFIs-bank linkage is self-interest motivated on the part of the MFI. There is no incentive rent required for MFI to take its role [@Fuentes1996; @Varghese2005], nor other policies such as subsidies are required. Since MFI's money is directly involved in this linkage, the lending decision of MFI is itself a trustable endorsement of the borrower's reputation and repayment capacity. Most importantly, collusion between MFI and the borrower will improve the benefit of this linkage.
 
-Gupta and Chaudhuri (1997) present a theory of interest rate determination on informal-sector credit where the farmer has to bribe the official of the formal credit agency in order to get formal credit, but the informal-sector interest rate and the effective formal-sector interest rate (incorporating the bribe) are equal in equilibrium (also see Chaudhuri and Gupta, 1996; where they incorporate the possibility that the loan officer of the formal credit agency is bribed by the farmer to reduce the delay in disbursement of formal credit). Saha and Thampy (2006) present a dynamic model of subsidized credit provision to examine how asymmetric information exacerbates inefficiency caused by corruption. They find that when a borrower and a corrupt loan officer interact with private information on the borrower's productivity, the official may induce one type of borrower to default. Chaudhuri and Ghosh-Dastidar (2011) also consider a similar corruption scenario by a bank official in disbursing formal credit. These are the common bribery related frauds which are less likely to disappear from countries where there are weak institutions which require attention in any commercialization of informal credit market. In the bank-MFI linkage program that we highlight in this paper, we are able to show that the presence of any type of corruption (bribery or fraudulent practice) as it may occur in any organization or government institution, requires a premium to be added to the cost of a loan which in turn makes the microfinance interest rate being higher than the market interest rate charged by a bank. Even with higher interest rates and default rates in the MFI sector relative to formal banks, Lahkar and Pingali (2016) show that the expansion of microfinance can represent a Pareto improvement in all borrowers¡¦ welfare.
+@Gupta1997 present a theory of interest rate determination on informal-sector credit where the farmer has to bribe the official of the formal credit agency in order to get formal credit, but the informal-sector interest rate and the effective formal-sector interest rate (incorporating the bribe) are equal in equilibrium (also see @Chaudhuri1996; where they incorporate the possibility that the loan officer of the formal credit agency is bribed by the farmer to reduce the delay in disbursement of formal credit). @Saha2006 present a dynamic model of subsidized credit provision to examine how asymmetric information exacerbates inefficiency caused by corruption. They find that when a borrower and a corrupt loan officer interact with private information on the borrower's productivity, the official may induce one type of borrower to default. @Chaudhuri2011 also consider a similar corruption scenario by a bank official in disbursing formal credit. These are the common bribery related frauds which are less likely to disappear from countries where there are weak institutions which require attention in any commercialization of informal credit market. In the bank-MFI linkage program that we highlight in this paper, we are able to show that the presence of any type of corruption (bribery or fraudulent practice) as it may occur in any organization or government institution, requires a premium to be added to the cost of a loan which in turn makes the microfinance interest rate being higher than the market interest rate charged by a bank. Even with higher interest rates and default rates in the MFI sector relative to formal banks, @Lahkar2016 show that the expansion of microfinance can represent a Pareto improvement in all borrowers¡¦ welfare.
 
-Finally, Jain and Mansuri (2003) provide a unified theory of early repayment and continued existence of informal moneylenders, while studying the interaction between the informal and the microfinance sector using a moral hazard framework. Jain and Mansuri (2003) conclude that the use of regularly scheduled repayments by MFIs force borrowers to take loans from informal lenders in order to repay microfinance loans. The rationale is that MFIs can benefit from the monitoring advantage of better-informed moneylenders. As a consequence, microfinance can expand the volume of informal lending and may also raise the interest rate in the informal sector. In that sense, our framework is complementary to Jain and Mansuri (2003), and we develop an extended approach to link MFIs with the formal commercial banks to expand this loan market by considering both lending (higher loan amount) and repayment. In a credit-constrained developing economy, financial intermediaries play a key role in bridging the gap between loan supply and loan demand, helping boost economic activity. Given the lack of willingness by the formal sector to lend to the poor, our paper puts together a framework linking formal banks and MFIs [as opposed to MFIs and informal money lenders as in Jain and Mansuri (2003)] so as to help achieve higher penetration, outreach, targeting, as well as repayment rates.
+Finally, @Jain2003 provide a unified theory of early repayment and continued existence of informal moneylenders, while studying the interaction between the informal and the microfinance sector using a moral hazard framework. @Jain2003 conclude that the use of regularly scheduled repayments by MFIs force borrowers to take loans from informal lenders in order to repay microfinance loans. The rationale is that MFIs can benefit from the monitoring advantage of better-informed moneylenders. As a consequence, microfinance can expand the volume of informal lending and may also raise the interest rate in the informal sector. In that sense, our framework is complementary to @Jain2003, and we develop an extended approach to link MFIs with the formal commercial banks to expand this loan market by considering both lending (higher loan amount) and repayment. In a credit-constrained developing economy, financial intermediaries play a key role in bridging the gap between loan supply and loan demand, helping boost economic activity. Given the lack of willingness by the formal sector to lend to the poor, our paper puts together a framework linking formal banks and MFIs [as opposed to MFIs and informal money lenders as in @Jain2003] so as to help achieve higher penetration, outreach, targeting, as well as repayment rates.
 
 In Section 'The Model', we describe a credit market with asymmetric information, where the commercial bank has incomplete information on the borrower's effort cost. ¡¥No Linkage¡¦ presents the two information problems: credit rationing and strategic default. ¡¥Linkage with MFI¡¦ introduces a linkage between MFI and the bank, and shows that even with the possibility of collusion in MFI, this linkage can mitigate the credit rationing and strategic default problems. An important assumption in the proposed linkage is that MFIs are more informative than commercial banks. We provide related evidence for this assumption in Section 'Related Evidence on Microfinance Activity'. Then we address briefly the historical failure of government intervention through priority sector lending, and describe some related evidence that supports our theoretical conclusions for the benefits of a linkage between commercial banks and MFIs. The last section contains concluding remarks.
 
@@ -40,7 +42,7 @@ In Section 'The Model', we describe a credit market with asymmetric information,
 
 We consider a credit market with asymmetric information. There are three players: commercial bank, MFI and a rural borrower. The rural borrower has a project which needs external funding L. MFI is different from commercial bank in two aspects: (1) MFI is local and knows better about the borrower, or has more weighing power than the borrower; (2) MFI is smaller in scale, so can only provide part of the required loan. The rate of return on the borrower's project is assumed to be stochastically determined by the borrower's effort, which is not observable by the commercial bank. The MFI, due to its advantage in location, knows better about the borrower's effort choice.
 
-Our contribution is to consider the possibility that the MFI can collude with the borrower, make a fictitious loan and then ask for a share of the extra loan from the bank. We will demonstrate that, introducing a linkage between MFI and the bank can mitigate the credit rationing and strategic default problems, even if we consider the possibility of collusion or frauds in MFI. The linkage between commercial bank and MFI takes the following form. In an environment with asymmetric information on the borrower's effort cost, the commercial bank takes the loan made by MFI as a collateral or endorsement. The MFI's lending decision will serve as a signal of the borrower's effort cost. The commercial bank then adjusts its belief on the borrower's effort decision, thus mitigating the credit rationing and strategic default problems.
+Our contribution is to consider the possibility that the MFI can collude with the borrower, make a fictitious loan and then ask for a share of the extra loan from the bank. We will demonstrate that, introducing a linkage between MFI and the bank can mitigate the credit rationing and strategic default problems, even if we consider the possibility of collusion or frauds in MFI. The linkage between commercial bank and MFI takes the following form. In an environment with asymmetric information on the borrower's effort cost, the commercial bank takes the loan made by MFI as a *collateral* or *endorsement*. The MFI's lending decision will serve as a signal of the borrower's effort cost. The commercial bank then adjusts its belief on the borrower's effort decision, thus mitigating the credit rationing and strategic default problems.
 
 Throughout this paper, we characterize the Bayesian equilibria for the model. We analyze the bank's (and MFI) loan decisions and the borrower's effort decision first. Then we look for the range of parameters that support the collusion-free equilibria.
 
@@ -50,10 +52,15 @@ We first demonstrate the existence of credit rationing and strategic default pro
 
 Consider an indivisible project which needs an external funding of size $L$. The rate of return for this project is assumed to be uncertain and determined by the borrower's effort. Specifically, denote $e \epsilon \left \{ 0,e_{H} \right \}$ with $0< e_{H}$, as the borrower's effort decision,3 and $R$ as the project's rate of return, which is a function of the borrower's effort. If $e = 0$, then $R = 0$ for sure; If $e = e_{H}$, then the rate of return on the borrower's project follows a nondecreasing distribution $F\left ( e_{H}, R \right )$ over $\left ( - \infty ,\infty \right )$, with math formula being the density function.
 
+We assume that there is asymmetric information between commercial bank and the borrower. That is, let $ce$ be the borrower's effort cost. The bank cannot observe the marginal cost $c$, but has a belief that c follows a uniform distribution over $\left [ 0,\bar{c} \right ]$, with $\bar{c} > e_{H}$. Under incomplete information, the commercial bank needs to decide whether to give a loan $L$ to the borrower. If the borrower is given this loan, she needs to decide whether to put in full effort $e_{H}$ or not. After the effort decision, the project return realizes and becomes publicly known.
 
+### Bank's loan decision
 
+The commercial bank will lend out **L** if the expected gain of lending is greater than the expected loss. That is, let $£l$ with $0 < £l < 1$ denote the bank's belief that the borrower will put in full effort $e_{H}$. We will later explain how this belief is determined by the bank's belief on the borrower's marginal cost of effort and the borrower's effort decision. Denote $r^{c}$ as the prevailing competitive interest rate.^[Due to competition, commercial banks usually charge a competitive interest rate, which is part of the reason why the bank cannot offer a loan contract with properly designed interest rates to screen the borrowers.] The expected *gain* for lending $L$ is:
 
+$$\rho L [ \int_{1}^{\left ( 1 + r^{c} \right )} \left ( R-1 \right )f\left ( e_{H},R \right )dR + r^{c} \int_{1 + r^{c}}^{\infty } f\left ( e_{H}, R\right )dR  ].$$
 
+The expected gain occurs only when the borrower puts in full effort, the probability of which is $£l$.
 
 
 
